--- a/source/wrkshp_repl.ipynb
+++ b/source/wrkshp_repl.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ainfanzon/CRL-IAM-Workshop/blob/main/wrkshp_repl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ainfanzon/CRL-IAM-Workshop/blob/main/source/wrkshp_repl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,7 +93,7 @@
         "id": "yeV_CW6ejXEj"
       },
       "id": "yeV_CW6ejXEj",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "id": "QxF5Bo5oaYp9"
       },
       "id": "QxF5Bo5oaYp9",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,16 +125,130 @@
       "id": "Dxdxqu_ZxpvK"
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "92adb521-beff-4edf-8e81-2a401b5552e4",
+      "metadata": {
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        },
+        "id": "92adb521-beff-4edf-8e81-2a401b5552e4",
+        "outputId": "32919b98-657f-4eba-b191-bbce6ed4b68e"
+      },
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "<h4><font color=green>CockroachDB cluster has: 3 node(s)</font></h4>"
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "qry01 = \"\"\"\n",
+        "SELECT max(node_id)\n",
+        "FROM crdb_internal.gossip_liveness\n",
+        "\"\"\"\n",
+        "\n",
+        "with conn.cursor() as cur:\n",
+        "    cur.execute(qry01)\n",
+        "    res_tuple = cur.fetchone()\n",
+        "    display(Markdown(f'<h4><font color=green>CockroachDB cluster has: {res_tuple[0]} node(s)</font></h4>'))"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "9cbb5aa5-6cf8-4c0b-8e1f-851b9b67d7d1",
       "metadata": {
         "id": "9cbb5aa5-6cf8-4c0b-8e1f-851b9b67d7d1"
       },
       "source": [
-        "cockroach workload init intro 'postgres://root@localhost:26257?sslmode=disable'\n",
+        "## Step 2. Load Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "340780c9-8f19-44bb-afe3-02950a30b3d1",
+      "metadata": {
+        "tags": [],
+        "id": "340780c9-8f19-44bb-afe3-02950a30b3d1"
+      },
+      "outputs": [],
+      "source": [
+        " # Long running cell\n",
+        "import multiprocessing, time\n",
+        "t0 = time.time()\n",
+        "\n",
+        "def network_call():\n",
+        "    for i in range(5):\n",
+        "        print(\"Step %i at time %1.1f\" % (time.time() - t0, i))\n",
+        "        time.sleep(1)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "17548396-6d9b-4eef-b209-d925d05856fa",
+      "metadata": {
+        "tags": [],
+        "id": "17548396-6d9b-4eef-b209-d925d05856fa"
+      },
+      "outputs": [],
+      "source": [
+        "multiprocessing.Process(target=network_call).start()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1b972583-7de6-481c-bd1a-b10e2833dc71",
+      "metadata": {
+        "tags": [],
+        "id": "1b972583-7de6-481c-bd1a-b10e2833dc71"
+      },
+      "outputs": [],
+      "source": [
+        "!/opt/homebrew/bin/cockroach workload init intro 'postgres://root@localhost:26257?sslmode=disable'\n",
         "%sql cockroachdb://root@localhost:26257/system?sslmode=disable\n",
         "mytable = %sql SELECT * FROM intro.mytable WHERE (l % 2) = 0\n",
-        "print(mytable)## Step 2. Load Data"
+        "print(mytable)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6417a723-722e-4740-8545-ade8ad65a902",
+      "metadata": {
+        "tags": [],
+        "id": "6417a723-722e-4740-8545-ade8ad65a902"
+      },
+      "source": [
+        "## Step 3. Add more nodes to the cluster\n",
+        "\n",
+        "<img src=\"./img/raft.png\" width=\"425\" height=\"525\">\n",
+        "\n",
+        "You'll see that there are now 5 nodes listed in the DB Console above\n",
+        "\n",
+        "At first, the replica count will be lower for nodes 4 and 5. Very soon, however, you'll see those numbers even out across all nodes, indicating that data is being automatically rebalanced to utilize the additional capacity of the new nodes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "925e9a40-07be-48e2-a1ca-30e551ac9109",
+      "metadata": {
+        "tags": [],
+        "id": "925e9a40-07be-48e2-a1ca-30e551ac9109"
+      },
+      "outputs": [],
+      "source": [
+        "scene_02"
       ]
     },
     {
