--- a/source/wrkshp_repl.ipynb
+++ b/source/wrkshp_repl.ipynb
@@ -20,22 +20,22 @@
         "\n",
         "<img src=\"https://drive.google.com/uc?id=1XYr9Tyrz31a5kZdo601xD1QWz_YM8-H3\">\n",
         "\n",
-        "## CockroachDB is a distributed SQL database that is __*highly scalable*__, __*resilient*__, and __*easy to use*__.\n",
+        "### CockroachDB is a distributed SQL database that is __*highly scalable*__, __*resilient*__, and __*easy to use*__.\n",
         "\n",
-        "## Identity and Access Management Workshop\n",
+        "# Identity and Access Management Workshop.\n",
         "---\n",
-        "## CockroachDB Overview\n",
+        "## CockroachDB Overview.\n",
         "\n",
-        "### Background Concepts\n",
+        "### Background Concepts.\n",
         "\n",
         "This section explains the concepts of ranges, range sets, replicas and leaders (a.k.a, leaseholders) which are the building blocks for\n",
         "[Replication and Rebalancing](https://www.cockroachlabs.com/docs/stable/demo-replication-and-rebalancing).\n",
         "\n",
         "In this section you will:\n",
         "\n",
-        "1. Start a 3-node cluster.\n",
-        "1. Check the status in the DB Console\n",
-        "1. Load some data and verify that it replicates in triplicate by default.\n",
+        "1. Start a three node cluster.\n",
+        "1. Check the status in the DB Console.\n",
+        "1. Load data and verify replication.\n",
         "\n",
         "<html>\n",
         "<head>\n",
@@ -65,26 +65,20 @@
         "</body>\n",
         "</html>\n",
         "\n",
-        "#### 1. Start a 3-node cluster.\n",
+        "#### 1. Start a three node cluster.\n",
         "\n",
-        "Copy and paste the following statements to your terminal.\n",
+        "Start with three nodes. For the purpose of this workshop each node represents a region.  In production, it is recommended that each region has a minimum of three nodes (availability zones).\n",
         "\n",
-        "`\n",
+        "- Copy and paste the following statements to your terminal.\n",
+        "\n",
+        "> <code>\n",
         "cockroach start --insecure --listen-addr=10.0.1.2:26257 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8080 --store=/home/cockroach/data/cr_data_1 --background\n",
-        "`\n",
-        "\n",
-        "`\n",
         "cockroach start --insecure --listen-addr=10.0.1.2:26258 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8081 --store=/home/cockroach/data/cr_data_2 --background\n",
-        "`\n",
-        "\n",
-        "`\n",
         "cockroach start --insecure --listen-addr=10.0.1.2:26259 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8082 --store=/home/cockroach/data/cr_data_3 --background\n",
-        "`\n",
+        "cockroach init --insecure --host 10.0.1.2\n",
+        "</code>\n",
         "\n",
-        "\n",
-        "<code>cockroach init --insecure --host 10.0.1.2</code>\n",
-        "\n",
-        "You should see this `Cluster successfully initialized` message.\n",
+        "You should see a `Cluster successfully initialized` message.\n",
         "\n",
         "Use __`psycopg2`__ to connect to the database cluster using the *__VM External IP__*"
       ]
@@ -112,7 +106,7 @@
         "id": "yeV_CW6ejXEj"
       },
       "id": "yeV_CW6ejXEj",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "92adb521-beff-4edf-8e81-2a401b5552e4",
       "metadata": {
         "tags": [],
@@ -189,7 +183,7 @@
         "outputId": "78c6f35b-c8d7-417e-ba50-bcf913857682"
       },
       "id": "SBAaW8nvsKUv",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +611,7 @@
         "id": "ANQw4fQhgqXE"
       },
       "id": "ANQw4fQhgqXE",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +651,7 @@
         }
       },
       "id": "6KwwdbtXcTDG",
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -737,7 +731,7 @@
         }
       },
       "id": "EN0xF3SDh6J0",
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,7 +793,7 @@
         }
       },
       "id": "KNj5_m5dkjsb",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "b48f3f02-84b9-49c8-b12f-424e9279a1c4",
       "metadata": {
         "tags": [],
@@ -966,7 +960,7 @@
         }
       },
       "id": "Uig-R3VKx5mL",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
