--- a/source/wrkshp_repl.ipynb
+++ b/source/wrkshp_repl.ipynb
@@ -31,12 +31,6 @@
         "This section explains the concepts of ranges, range sets, replicas and leaders (a.k.a, leaseholders) which are the building blocks for\n",
         "[Replication and Rebalancing](https://www.cockroachlabs.com/docs/stable/demo-replication-and-rebalancing).\n",
         "\n",
-        "In this section you will:\n",
-        "\n",
-        "1. Start a three node cluster.\n",
-        "1. Check the status in the DB Console.\n",
-        "1. Load data and verify replication.\n",
-        "\n",
         "<html>\n",
         "<head>\n",
         "<style>\n",
@@ -65,9 +59,15 @@
         "</body>\n",
         "</html>\n",
         "\n",
+        "In this section you will:\n",
+        "\n",
+        "1. Start a three node cluster.\n",
+        "1. Verify the cluster deployment.\n",
+        "1. Load data and verify replication.\n",
+        "\n",
         "#### 1. Start a three node cluster.\n",
         "\n",
-        "Start with three nodes. For the purpose of this workshop each node represents a region.  In production, it is recommended that each region has a minimum of three nodes (availability zones).\n",
+        "Start with three nodes. For the purpose of this workshop each node will represent a region (Europe, U.S. West and U.S. East)  NOTE: In production, it is recommended that each region has a minimum of three nodes on different availability zones (or servers).\n",
         "\n",
         "- Copy and paste the following statements to your terminal.\n",
         "\n",
@@ -79,6 +79,28 @@
         "</code>\n",
         "\n",
         "You should see a `Cluster successfully initialized` message.\n",
+        "\n",
+        "#### 2. Verify the cluster deployment\n",
+        "\n",
+        "Verify there are three instances of the `cockroach` process running on different ports.\n",
+        "\n",
+        "- Open a terminal window and connect to the GCP compute engine using ssh.\n",
+        "\n",
+        "> `ssh ainfanzon@35.235.99.125`\n",
+        "\n",
+        "- List all active `cockroach` processes.\n",
+        "\n",
+        "> `pgrep -a cockroach`\n",
+        "\n",
+        "&emsp;Each process will be listening on the same IP but different port.\n",
+        "\n",
+        "> <code>\n",
+        "--listen-addr=10.0.1.2:26257<br>\n",
+        "--listen-addr=10.0.1.2:26258<br>\n",
+        "--listen-addr=10.0.1.2:26259\n",
+        "</code>\n",
+        "\n",
+        "&emsp;NOTE: Need to figure out how to move the public key to the CEs in the ansible script `dply_crdb_infra.yml`.\n",
         "\n",
         "Use __`psycopg2`__ to connect to the database cluster using the *__VM External IP__*"
       ]
