--- a/Exercise_01.ipynb
+++ b/Exercise_01.ipynb
@@ -81,9 +81,9 @@
         "- Copy and paste the following statements to your terminal.\n",
         "\n",
         "> <code>\n",
-        "cockroach start --insecure --listen-addr=10.0.1.2:26257 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8080 --store=/home/cockroach/data/cr_data_1 --background\n",
-        "cockroach start --insecure --listen-addr=10.0.1.2:26258 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8081 --store=/home/cockroach/data/cr_data_2 --background\n",
-        "cockroach start --insecure --listen-addr=10.0.1.2:26259 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8082 --store=/home/cockroach/data/cr_data_3 --background\n",
+        "cockroach start --insecure --listen-addr=10.0.1.2:26257 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8080 --locality=region=us-west,zone=us-west-1a --store=/home/cockroach/data/cr_data_1 --background<br>\n",
+        "cockroach start --insecure --listen-addr=10.0.1.2:26258 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8081 --locality=region=us-east,zone=us-east-1a --store=/home/cockroach/data/cr_data_2 --background<br>\n",
+        "cockroach start --insecure --listen-addr=10.0.1.2:26259 --join=10.0.1.2:26257,10.0.1.2:26258,10.0.1.2:26259 --http-addr=10.0.1.2:8082 --locality=region=europe-west,zone=europe-west-1a --store=/home/cockroach/data/cr_data_3 --background<br>\n",
         "cockroach init --insecure --host 10.0.1.2\n",
         "</code>\n",
         "\n",
